[package]
name = "bevy_roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
rand = "0.9.0-alpha.1"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

########################
# BEVY REQUIRED CONFIG #
########################

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3