[package]
name = "bevy_roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }

num-traits = "0.2.19"

# RNG
rand_core = "0.6.4"
rand_chacha = "0.3.1"
wyrand = "0.2.0"
bevy_rand = "0.6"
bevy_prng = { version = "0.6", features = ["rand_chacha", "wyrand"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

########################
# BEVY REQUIRED CONFIG #
########################

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
